refactor(build.config): add jvm argument EnableDynamicAgentLoading